--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,8 +32,8 @@ android {
         applicationId "com.dalip.hospital_doctor"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 101
+        versionName "1.1"
     }
 
     buildTypes {
