--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.6.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_switch: 0.2.2
+  awesome_dialog: any
+  http: 0.13.3
+  get: ^4.3.8
+  fluttertoast: 7.1.8
+  image_picker: ^0.8.4+4
+  form_data: ^0.0.1-nullsafety.1
+  dio: ^4.0.1
+  image: ^3.0.8
+  shared_preferences: ^2.0.8
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -57,6 +68,10 @@ flutter:
    - assets/images/manPatients.jpg
    - assets/images/doctorlogosec.jpg
    - assets/images/doctorlogothird.jpg
+   - assets/images/drEmmaImage.jpg
+   - assets/images/drLilyImage.jpg
+   - assets/images/dentist.jpg
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
